Add custom resource to clear out the ECR image repo when the CFN stack deletes Update the partition and sort keys in all the DynamoDB tables to use underscores instead of camel case to avoid confusion when we ask workshop attendees to create the product table Update the 2nd version of the product service so it actually works and takes the tenant id as part of the request

--- a/source/web-client/app/views/order-add.html
+++ b/source/web-client/app/views/order-add.html
@@ -3,7 +3,7 @@
   <div class="form-group">
     <label for="productId">Product</label>
     <select class="form-control" id="productId" ng-model="order.productId" ng-change="productChanged(productId)" required="">
-      <option ng-repeat="product in products" ng-value="product.productId">{{product.title}}</option>
+      <option ng-repeat="product in products" ng-value="product.product_id">{{product.title}}</option>
     </select>
   </div>
   <div class="form-group">
