--- a/source/web-client/app/views/orders.html
+++ b/source/web-client/app/views/orders.html
@@ -41,8 +41,8 @@
     <td>{{ order.quantity * order.unitCost | currency }}</td>
     <td>
       <div class="button-group">
-        <a ng-href="/#!/order/edit/{{ order.orderId }}"><span class="glyphicon glyphicon-pencil"></span></a>
-        <a ng-href="/#!/order/delete/{{ order.orderId }}"><span class="glyphicon glyphicon-trash"></span></a>
+        <a ng-href="/#!/order/edit/{{ order.order_id }}"><span class="glyphicon glyphicon-pencil"></span></a>
+        <a ng-href="/#!/order/delete/{{ order.order_id }}"><span class="glyphicon glyphicon-trash"></span></a>
       </div>
     </td>
   </tr>
