--- a/source/web-client/app/views/register.html
+++ b/source/web-client/app/views/register.html
@@ -1,7 +1,7 @@
 <div ng-show="!hideRegistrationForm" class="col-md-6 col-md-offset-3">
   <h2>Register</h2>
   <form name="form" ng-submit="formSubmit()" role="form">
-    <div class="form-group"">
+    <div class="form-group">
       <label for="firstName">First name</label>
       <input type="text" name="firstName" id="firstName" class="form-control" ng-model="tenant.firstName" required="" />
     </div>
